[package]
name = "ogn-parser-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ognparser"
crate-type = ["cdylib"]

[dependencies]
#pyo3 = { version = "0.22.1", features = ["extension-module"] }
aprs-parser = { git = "https://github.com/Meisterschueler/aprs-parser-rs", branch = "clean" }

[dependencies.pyo3]
version = "0.22.1"

[features]
extension-module = ["pyo3/extension-module"]
