[package]
name = "ogn-parser-pyo3"
version.workspace = true
authors = ["Konstantin Gründger <konstantin.gruendger@gmail.com>"]
edition = "2024"
description = "OGN message parser for Python"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ogn_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version= "0.27.1", features = ["chrono", "rust_decimal"] }
rayon = "1.10.0"
serde_json = "1.0"
ogn-parser = { path = "../core", version = "0.3.18" }
pythonize = "0.27.0"
rust_decimal = "1.37.1"
